feat: Don't wrap response array in data attribute
